added nav bar and hero section

--- a/client/micasa-project/src/components/navbar/navbar.scss
+++ b/client/micasa-project/src/components/navbar/navbar.scss
@@ -23,6 +23,7 @@ nav {
     display: flex;
     align-items: center;
     gap: 50px;
+    padding-left: 100px;
 
     .logo {
       font-weight: bold;
@@ -46,12 +47,26 @@ nav {
       }
     }
   }
+
+  .center {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    img {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      object-fit:cover;
+ 
+    }
+  }
+
   .right {
     flex: 2;
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    background-color: #fcf5f3;
+
     height: 100%;
 
     @include md {
@@ -63,12 +78,12 @@ nav {
       margin: 20px;
     }
 
-    .user{
+    .user {
       display: flex;
       align-items: center;
       font-weight: bold;
 
-      img{
+      img {
         width: 40px;
         height: 40px;
         border-radius: 50%;
@@ -76,20 +91,20 @@ nav {
         margin-right: 20px;
       }
 
-      span{
-        @include sm{
+      span {
+        @include sm {
           display: none;
         }
       }
 
-      .profile{
+      .profile {
         padding: 12px 24px;
         background-color: #fece51;
         cursor: pointer;
         border: none;
         position: relative;
-        
-        .notification{
+
+        .notification {
           position: absolute;
           top: -8px;
           right: -8px;
@@ -102,12 +117,11 @@ nav {
           align-items: center;
           justify-content: center;
         }
-
       }
     }
 
     .register {
-      background-color: #fece51;
+      background-color: #d896ff;
     }
 
     .menuIcon {
