--- a/client/micasa-project/src/routes/homePage/homePage.scss
+++ b/client/micasa-project/src/routes/homePage/homePage.scss
@@ -4,14 +4,23 @@
 }
 
 .hero-section {
+  // display: flex;
+  // align-items: center;
+  // gap: 3rem;
+  
+  // max-width: 1200px;
+  // margin: 0 auto;
+  // min-height: calc(60vh);
+
+  position: relative;
+  width: 100% ;
+  height: 100vh; 
+  background-image: url('../../photo/hero.png');
+  background-size: cover;
+  background-position: center; 
   display: flex;
   align-items: center;
-  gap: 3rem;
-  
-  max-width: 1200px;
-  margin: 0 auto;
-  min-height: calc(60vh);
-
+  justify-content: center;
   @media (max-width: 768px) {
     flex-direction: column;
     text-align: center;
@@ -109,7 +118,7 @@
 
 .hero-image {
   flex: 1;
-  max-width: 600px;
+  max-width: 800px;
 
   img {
     width: 100%;
