--- a/client/micasa-project/src/routes/homePage/homePage.scss
+++ b/client/micasa-project/src/routes/homePage/homePage.scss
@@ -31,7 +31,9 @@
 
 .hero-content {
   flex: 1;
-  max-width: 500px;
+  flex-direction: column;
+  max-width: max-content;
+  align-items: center;
 }
 
 .hero-title {
@@ -48,6 +50,12 @@
   @media (max-width: 480px) {
     font-size: 2rem;
   }
+}
+.search-bar { 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
 }
 
 .hero-subtitle {
